--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
     </div>
   </header>
 
-  <section class="content">
+  <section class="content mt-10 px-6">
     <div class="container mx-auto">
       <div class="navtabs">
         <button data-type="todos">Todos</button>
         <button data-type="fire">Fire</button>
-        <button data-type="eletric">Eletric</button>
+        <button data-type="electric">Eletric</button>
         <button data-type="water">Water</button>
       </div>
       <div class="pokemon-wrapper ">
